# minweb

./: CMakeLists.txt  LICENSE.txt  README.md  config.h.in
include/minweb/: graph.h  lexer.h  processor.h  utilities.h
src/lexer/: lexer.cpp  lexer_accept.cpp  lexer_decode_macro_ref.cpp  lexer_decode_special_directive.cpp  lexer_get_input_state.cpp  lexer_get_token_string.cpp  lexer_macro_type_from_macro_begin.cpp  lexer_put_back.cpp  lexer_read.cpp  lexer_read_char.cpp  lexer_read_linecol.cpp  lexer_set_input_state.cpp  lexer_start.cpp  lexer_substitution_type_from_text_substitution.cpp
src/minextract/: main.cpp
src/mintangle/: main.cpp
src/mintrace/: main.cpp
src/minweave/: main.cpp
src/processor/: processor.cpp  processor_include_stream.cpp  processor_register_macro_begin_callback.cpp  processor_register_macro_end_callback.cpp  processor_register_macro_ref_callback.cpp  processor_register_passthrough_callback.cpp  processor_register_special_directive_callback.cpp  processor_register_text_substitution_callback.cpp  processor_run.cpp
src/util/: graph_add_edge.cpp  graph_add_node.cpp  graph_topological_sort.cpp  utilities_include_processor_callback.cpp
test/: test_graph.cpp  test_lexer.cpp  test_processor.cpp
